# zettelcourse

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
{{ cookiecutter.project_slug }}/.zetteldev/: create_lecture.py  hf_data.py  new_git_worktree.sh  render_notebook.py  review_worktree.sh
{{ cookiecutter.project_slug }}/.zetteldev/templates/: practice_template.ipynb  study_template.ipynb
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
